test/performance/vectorization/vectorizeOnly/constChecking/serialConstChecking.good
serialConstChecking.chpl:7: error: illegal lvalue in assignment
serialConstChecking.chpl:8: error: illegal lvalue in assignment
serialConstChecking.chpl:17: error: illegal lvalue in assignment
serialConstChecking.chpl:22: error: illegal lvalue in assignment
serialConstChecking.chpl:27: error: illegal lvalue in assignment
serialConstChecking.chpl:33: error: illegal lvalue in assignment
serialConstChecking.chpl:38: error: illegal lvalue in assignment
serialConstChecking.chpl:43: error: illegal lvalue in assignment
